--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent_white">#E4FFFFFF</color>
+    <color name="white_gray">#DDDDDD</color>
+    <color name="yellow_ad">#EFDA20</color>
+    <color name="red_ad">#DA2D21</color>
+    <color name="white_5F6">#EBF5F6</color>
+    <color name="red">#F44336</color>
 </resources>
